[package]
name = "proj"
description = "High-level Rust bindings for the latest stable version of PROJ"
version = "0.27.2"
authors = [
    "The Georust Developers <mods@georust.org>"
]
repository = "https://github.com/georust/proj"
documentation = "https://docs.rs/proj/"
keywords = ["proj", "projection", "osgeo", "geo"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
rust-version = "1.65"

[dependencies]
proj-sys = { version = "0.23.1", path = "proj-sys" }
geo-types = { version = "0.7.10", optional = true }
libc = "0.2.119"
num-traits = "0.2.14"
thiserror = "1.0.30"
reqwest = { version = "0.11.9", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }

[workspace]
members = ["proj-sys"]

[features]
default = ["geo-types"]
bundled_proj = [ "proj-sys/bundled_proj" ]
pkg_config = [ "proj-sys/pkg_config" ]
network = ["reqwest", "proj-sys/network"]

[dev-dependencies]
# approx version must match the one used in geo-types
approx = ">= 0.4.0, < 0.6.0"
geo-types = { version = "0.7.10", features = ["approx"] }

[package.metadata.docs.rs]
features = [ "proj-sys/nobuild", "network", "geo-types" ]
rustdoc-args = ["--cfg", "docsrs"]
