[package]
name = "proj"
description = "High-level Rust bindings for the latest stable version of PROJ"
version = "0.31.0"
authors = [
    "The Georust Developers <mods@georust.org>"
]
repository = "https://github.com/georust/proj"
documentation = "https://docs.rs/proj/"
keywords = ["proj", "projection", "osgeo", "geo"]
categories = ["science::geo", "api-bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
proj-sys = { version = "0.27.0", path = "proj-sys" }
geo-types = { version = "0.7.16", optional = true }
libc = "0.2.172"
num-traits = "0.2.14"
thiserror = "2.0.0"
ureq = { version = "3.0.11", optional = true }
http = { version = "1.3.0", optional = true }

[workspace]
members = ["proj-sys"]

[features]
default = ["geo-types"]
bundled_proj = [ "proj-sys/bundled_proj" ]
bundled_proj_sqlite = [ "proj-sys/bundled_proj_sqlite" ]
pkg_config = [ "proj-sys/pkg_config" ]
network = ["ureq", "http", "proj-sys/network"]

[dev-dependencies]
# approx version must match the one used in geo-types
approx = "0.5"
geo-types = { version = "0.7.16", features = ["approx"] }

[package.metadata.docs.rs]
features = [ "proj-sys/nobuild", "network", "geo-types" ]
rustdoc-args = ["--cfg", "docsrs"]
