[package]
name = "proj-sys"
description = "Rust bindings for PROJ v9.4.x"
repository = "https://github.com/georust/proj"
version = "0.24.0"
readme = "README.md"
authors = ["The Georust developers <mods@georust.org>"]
keywords = ["proj", "projection", "osgeo", "geo", "geospatial"]
license = "MIT OR Apache-2.0"
edition = "2021"
links = "proj"
rust-version = "1.70"

[dependencies]
libsqlite3-sys = ">=0.28,<0.31"
link-cplusplus = "1.0"

[build-dependencies]
bindgen = { version = "0.69", optional = true }
pkg-config = "0.3.25"
cmake = "0.1.50"
flate2 = "1.0.24"
tar = "0.4.40"

[features]
nobuild = []
bundled_proj = []
# `pkg_config` feature is deprecated and does nothing
pkg_config = []
network = ["tiff"]
tiff = []
buildtime_bindgen = ["dep:bindgen"]

[package.metadata.docs.rs]
features = [ "nobuild" ] # This feature will be enabled during the docs.rs build
